Submit HTML, which has lots of functions.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>新闻收集站</title>
+    <!--引入 JQuery, Echarts-->
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.2/dist/echarts.min.js"></script>
     <script src="./javascripts/echarts-wordcloud/dist/echarts-wordcloud.js"></script>
