Submit ECNU news HTML.

--- a/ecnu_site/public/index.html
+++ b/ecnu_site/public/index.html
@@ -429,6 +429,7 @@
       }
     });
 
+    // 在复合查询页面的搜索框按下回车，也可以进行搜索与显示
     $("#searchText1").keypress(function(event) {
       if (event.which === 13) {           // 回车键的键码是13
         console.log(1);
