Submit news HTML.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -27,6 +27,7 @@
     新闻收集站
 </h1>
 
+<!--主页引导-->
 <div id="mainDiv">
     <div id="mainText">
         <br>欢迎来到Ryan Watson的新闻收集站！
@@ -161,7 +162,7 @@
     </div>
 </div>
 
-<!--Javascript 后端-->
+<!--Javascript-->
 <script>
     $(document).ready(function() {
         var currentPage = 1;        // 内容查询页面使用的当前页码
