Submit news HTML.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -162,6 +162,10 @@
     </div>
 </div>
 
+<div class="footer">
+    &copy; 2023 Ryan Watson. All rights reserved.
+</div>
+
 <!--Javascript-->
 <script>
     $(document).ready(function() {
