Submit ECNU news HTML.

--- a/ecnu_site/public/index.html
+++ b/ecnu_site/public/index.html
@@ -158,6 +158,11 @@
   </div>
 </div>
 
+<!--版权标记-->
+<div class="footer">
+  &copy; 2023 Ryan Watson. All rights reserved.
+</div>
+
 <!--Javascript 后端-->
 <script>
   $(document).ready(function() {
