Submit ECNU news HTML.

--- a/ecnu_site/public/index.html
+++ b/ecnu_site/public/index.html
@@ -63,8 +63,10 @@
     <input class="form-submit" type="button" value="查询" id="Text">
   </form>
   <!--表格-->
-  <div class="cardLayout" style="margin: 10px 0">
-    <table width="100%" id="record2"></table>
+  <div class="container">
+    <div class="cardLayout" style="margin: 10px 0">
+      <table width="100%" id="record2"></table>
+    </div>
   </div>
   <!--翻页按钮-->
   <div class="button-container">
@@ -111,8 +113,10 @@
     <input class="form-submit" type="button" value="查询" id="Complex">
   </form>
   <!--表格-->
-  <div class="cardLayout" style="margin: 10px 0px">
-    <table width="100%" id="record1"></table>
+  <div class="container">
+    <div class="cardLayout" style="margin: 10px 0px">
+      <table width="100%" id="record1"></table>
+    </div>
   </div>
   <!--翻页按钮-->
   <div class="button-container">
