Submit news HTML.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -288,7 +288,7 @@
                             gridSize: 3,                // 词的间距
                             // shape: 'diamond',           // 词云形状，可选diamond，pentagon，circle，triangle，star等形状
                             rotationRange: [-45, 0, 45, 90],
-                            maskImage: maskImage,
+                            maskImage: maskImage,       // 词云背景形状
                             sizeRange: [18, 40],        // 词云大小范围
                             width: 750,                 // 词云显示宽度
                             height: 590,                // 词云显示高度
