Submit news HTML.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -322,7 +322,7 @@
                     }
                 ]
             };
-            // 使用刚指定的配置项和数据显示图表
+            // 使用刚指定的配置项和数据显示图表，并且确保每一次点击都可以生成词云图
             setTimeout(function() {
                 myChart.setOption(option, true);
             }, 0);
