Submit news HTML.

--- a/search_site/public/index.html
+++ b/search_site/public/index.html
@@ -725,6 +725,7 @@
             $("#paginationInfo2").text(paginationInfo2);
         }
 
+        // 留言板块的 POST 请求
         var messageContent = "";
         var submitButton = document.getElementById('submitButton');
         submitButton.addEventListener('click', function() {
